# fs-organizer

./: .gitignore  .pre-commit-config.yaml  AGENTS.MD  CLAUDE.md  Design statement.md  PR_DESCRIPTION.md  README.md  TESTING.md  common.py  database.py  extract_zip.py  extract_zip_test.py  filename_utils.py  gather.py  gather_test.py  group.py  group_test.py  justfile  organize_tom_cartos.py  organizer.py  organizer_test.py  organizer_v2.py  organizer_v2_test.py  pyproject.toml  requirements.txt  sample_config.toml  virtual_folder.py  virtual_folder_test.py
organizer/: .gitignore  AGENTS.md  CLAUDE.md  Readme.md  conftest.py  folder_paths.txt  folder_reconstruction.py  organizer.py  organizer_api.py  pyproject.toml  pyrightconfig.json
organizer/api/: api.py  api_test.py  endpoints_test.py  models.py  models_test.py  profiling.py  tasks.py
organizer/classifier/: feature_extraction.py  leaf_classifer.py  tune_classifier.py
organizer/config/: creators.yaml  filename_cleaning.yaml  variants.yaml
organizer/data_models/: api.py  categorize.py  classify.py  database.py  folder.py  pipeline.py
organizer/fine_tuning/: CLASSIFICATION_PIPELINE_DESIGN.md  HEURISTIC_CLASSIFIER.md  README.md  __init__.py  build_classification_table.py  classifiers.py  cli.py  cli_settings.py  common.py  evaluation.py  evaluation_test.py  feature_extraction.py  feature_extraction_test.py  heuristic_classifier.py  heuristic_classifier_test.py  llm_classifier_prompt.md  predict.py  prediction_db.py  prediction_utils.py  run_classifier.py  run_classifier_test.py  sampling.py  settings.py  utils.py  (+9 more)
(+220 files in other folders)
