[project]
name = "organizer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi[standard]>=0.115.6",
    "nltk>=3.9.1",
    "pytest>=8.3.4",
    "rapidfuzz>=3.11.0",
    "ruff>=0.8.4",
    "scikit-learn>=1.6.0",
    "sentence-transformers>=4.1.0",
    "sqlalchemy>=2.0.36",
    "typer>=0.15.1",
    "wordfreq>=3.1.1",
]

[dependency-groups]
dev = [
    "pyright>=1.1.407",
]
