[project]
name = "organizer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi[standard]>=0.115.6",
    "pydantic>=2.12.5",
    "pyinstrument>=5.1.2",
    "pytest>=8.3.4",
    "rapidfuzz>=3.11.0",
    "ruff>=0.8.4",
    "scikit-learn>=1.6.0",
    "sentence-transformers>=4.1.0",
    "sqlalchemy>=2.0.36",
    "typer>=0.15.1",
    "wordfreq>=3.1.1",
]

[dependency-groups]
dev = [
    "debugpy>=1.8.19",
    "factory-boy>=3.3.0",
    "pre-commit>=4.0.1",
    "pyright>=1.1.407",
    "ty>=0.0.8",
]

classifier = [
    "datasets>=4.4.2",
    "scikit-learn>=1.6.0",
    "sentence-transformers>=4.1.0",
    "setfit>=1.1.3",
]

[tool.pytest.ini_options]
markers = [
    "ml: marks tests that require large ML dependencies (sentence-transformers, setfit, datasets)",
]

[tool.ty.src]
exclude = ["conftest.py"]
